Closed
Bug 17861
Opened 26 years ago
Closed 26 years ago
Should use logical resolution from OS when higher than 96ppi
Categories
(Core Graveyard :: GFX, defect, P3)
Tracking
(Not tracked)
VERIFIED
FIXED
M13
People
(Reporter: dbaron, Assigned: dbaron)
Details
(Whiteboard: Unix fix attached)
Attachments
(2 files)
|
3.04 KB,
patch
|
Details | Diff | Splinter Review | |
|
3.04 KB,
patch
|
Details | Diff | Splinter Review |
DESCRIPTION: Currently Mac and Linux, by default (i.e., without the secret
browser.screen_resolution pref), do not use the logical resolution from the
operating system at all. Instead, they assume 96ppi. I think this is a bad
idea - they should only assume 96ppi when the operating system claims the
logical resolution is *less* than 96ppi. If the OS gives a value *more* than
96ppi, then the OS value should be used. (Users with poor vision, for example,
may have a high logical resolution set. Or, for that matter, users with
high-res monitors. The reason for doing this at all is that the Windows default
is 96ppi, and many web designers write pages with physical units that are
illegible with a logical resolution smaller than 96ppi, because the fonts become
too small to read. Therefore, there's no reason to *lower* the logical
resolution to 96ppi -- it should only be raised to 96ppi.) The code should also
respect the browser.screen_resolution pref above all.
I'll try to submit a patch that does this on Linux. Sometime, that is...
QA: I can verify this bug by looking at the code. Steps to reproduce are too
hard...
| Assignee | ||
Comment 1•26 years ago
|
||
| Assignee | ||
Comment 2•26 years ago
|
||
| Assignee | ||
Comment 3•26 years ago
|
||
I tested the patch each of the following ways with my X server's res set to
75dpi and then 117dpi. It worked as expected (correct results given for 75 and
117):
* viewer (96, 117)
* apprunner, pref set to 91 (91, 91)
* apprunner, pref set to 0 (75, 117)
* apprunner, pref set to -1 (96, 117)
* apprunner, no pref (96, 117)
| Assignee | ||
Updated•26 years ago
|
Whiteboard: Unix fix attached (Mac still needs to be done)
Updated•26 years ago
|
Assignee: beard → erik
OS: All → Linux
Hardware: All → PC
Whiteboard: Unix fix attached (Mac still needs to be done) → Unix fix attached
Updated•26 years ago
|
Status: NEW → ASSIGNED
Target Milestone: M16
Updated•26 years ago
|
Assignee: erik → dbaron
Status: ASSIGNED → NEW
Target Milestone: M16 → M13
Updated•26 years ago
|
Status: NEW → RESOLVED
Closed: 26 years ago
Resolution: --- → FIXED
Comment 5•26 years ago
|
||
Reviewed and checked in David's fix.
Comment 6•26 years ago
|
||
Marking FIXED.
Updated•17 years ago
|
Product: Core → Core Graveyard
You need to log in
before you can comment on or make changes to this bug.
Description
•