bug 17861; set minimum default logical resolution to 96, using OS's reported value if higher than 96; coded by David Baron; r=erik